# servos-framework

./: .env  .gitignore  .gitlab-ci.yml  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: framework.md  helloworld.md  log.md  manage.md  settings.md
servos/: __init__.py  manage.py
servos/contrib/i18n/: middle_i18n.py  settings.ini
servos/core/: commands.py  default_settings.ini  dispatch.py  service.py  simpleframe.py
servos/i18n/: __init__.py  trans_null.py  trans_real.py
servos/template_files/command/: commands.py
servos/template_files/project/: manage.py  setup.py
servos/template_files/project/services/: local_settings.ini  settings.ini
servos/template_files/service/: requirements.txt  service.py  settings.ini
servos/utils/: common.py  localproxy.py  pyini.py
