[metadata]
name = portal-servos
description-file =
    README.md
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    servos

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[entry_points]
console_scripts =
    servos = servos.manage:main
